@@ -1,0 +1,164 @@
+---
+name: CI
+
+on: [push]
+
+env:
+  APACHE_RELEASE: http://archive.apache.org/dist/httpd/httpd-2.4.46.tar.gz
+  MODPERL_RELEASE: http://www.cpan.org/authors/id/S/SH/SHAY/mod_perl-2.0.11.tar.gz
+
+jobs:
+  build:
+    name: "Build a distribution tarball"
+    runs-on: ubuntu-latest
+
+    container:
+      image: perldocker/perl-tester:latest
+
+    steps:
+      - name: Setup GitHub user
+        run: |
+          apt-get update
+          apt-get install -y sudo
+          adduser --uid 1001 github
+
+      - name: Build Apache
+        run: |
+          apt-get install -y libapr1 libapr1-dev libaprutil1 libaprutil1-dev
+          wget --no-verbose $APACHE_RELEASE
+          tar -xzf httpd-*.tar.gz
+          cd httpd*/
+            ./configure --bindir=/usr/local/bin/ --with-mpm=prefork
+            make -j 4
+            make install
+          cd ../
+          rm -rf httpd-*
+
+      - name: Build mod_perl
+        run: |
+          wget --no-verbose $MODPERL_RELEASE
+          tar -xzf mod_perl-*.tar.gz
+          cd mod_perl*/
+            perl Makefile.PL MP_NO_THREADS=1
+            make -j 4
+            make install
+          cd ../
+          rm -rf mod_perl*
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install CPM + Dist::Zilla Author Bundle
+        uses: perl-actions/install-with-cpm@stable
+        with:
+          sudo: false
+          install: |
+            Dist::Zilla::PluginBundle::Author::GTERMARS
+            Dist::Zilla::PluginBundle::ApacheTest
+
+      - name: Install dependencies
+        run: cpm install -g --no-test --show-build-log-on-failure $(dzil listdeps --author --missing)
+
+      - name: Test
+        run: |
+          chown -R github .
+          sudo --user github dzil test --all --test-verbose
+
+      - name: Build tarball
+        run: dzil build
+
+      - name: Upload tarball artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: tarball
+          path: "*.gz"
+
+      - name: Archive CPM logs
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: build.log
+          path: ~/.perl-cpm/build.log*
+
+  test:
+    name: "Perl v${{ matrix.perl-version }}"
+    needs: build
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        perl-version:
+          - "latest"
+          - "5.30"
+          - "5.28"
+          - "5.26"
+          - "5.24"
+          - "5.22"
+          - "5.20"
+
+    container:
+      image: perl:${{ matrix.perl-version }}
+
+    steps:
+      - name: Setup GitHub user
+        run: |
+          apt-get update
+          apt-get install -y sudo
+          adduser --uid 1001 github
+
+      - name: Build Apache
+        run: |
+          apt-get install -y libapr1 libapr1-dev libaprutil1 libaprutil1-dev
+          wget --no-verbose $APACHE_RELEASE
+          tar -xzf httpd-*.tar.gz
+          cd httpd*/
+            ./configure --bindir=/usr/local/bin/ --with-mpm=prefork
+            make -j 4
+            make install
+          cd ../
+          rm -rf httpd-*
+
+      - name: Build mod_perl
+        run: |
+          wget --no-verbose $MODPERL_RELEASE
+          tar -xzf mod_perl-*.tar.gz
+          cd mod_perl*/
+            perl Makefile.PL MP_NO_THREADS=1
+            make -j 4
+            make install
+          cd ../
+          rm -rf mod_perl*
+
+      - name: Download tarball artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: tarball
+
+      - name: Unpack tarball
+        run: tar -xz --strip-components 1 -f *.gz
+
+      - name: Perl version
+        run: perl -V
+
+      - name: Install dependencies
+        uses: perl-actions/install-with-cpanm@v1
+        with:
+          sudo: false
+          args: "--installdeps . --with-recommends"
+
+      - name: Build
+        run: |
+          perl Makefile.PL
+          make
+
+      - name: Test
+        run: |
+          chown -R github .
+          sudo --user github make test TEST_VERBOSE=1
+
+      - name: Archive CPANM logs
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: build.log
+          path: ~/.cpanm/work/*/build.log
